enh(53):fix scrollbar size

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ button {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
